@@ -10,16 +10,17 @@ distribution_type:        module
 installdirs:              site
 
 requires:
-  perl:                   5.006
-  Labyrinth:              5.22
+  perl:                     5.006
+  Labyrinth:                5.32
 recommends:
-  Test::CPAN::Meta:       0
-  Test::CPAN::Meta::JSON: 0
-  Test::Pod:              1.00
-  Test::Pod::Coverage:    0.08
+  Test::CPAN::Meta:         0
+  Test::CPAN::Meta::JSON:   0
+  Test::Pod:                1.00
+  Test::Pod::Coverage:      0.08
 build_requires:
-  IO::File:               0
-  Test::More:             0.70
+  IO::File:                 0
+  Labyrinth::Test::Harness: 1.02
+  Test::More:               0.70
 
 provides:
   Labyrinth::Plugin::Requests:
